@@ -10,6 +10,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [FRONTEND] New last_update_time field
 ### Fixed
 - [GUI] [FRONTEND] Bug allowing the creation of an http or tcp frontend without a listener
+- [LOG_FORWARDER] Rsyslog config generation error when '-' found in LOGOM name
+- [LOG_FORWARDER] Frontends configs aren't refreshed when LOGOM used as parse failure
 
 
 ## [2.12.0]
